--- a/iiot/taoyuang1000/register/css/style.css
+++ b/iiot/taoyuang1000/register/css/style.css
@@ -44,9 +44,12 @@ button.btn-style:hover{ opacity: .9; }
 .edit-userinfo .field{ width: 100%; text-align: left; padding: 5px 0;}
 .edit-userinfo .field .r-input{ float: left; width: calc(100% - 105px); }
 .edit-userinfo .field input{/* border: 2px solid #eaedef;*/ background-color: #e2655f; border: 2px solid #e2655f; color: #fff; border-radius: 4px; text-align: center; width: 100%; line-height: 40px; padding:5px 20px; font-size: 17px;}
+.edit-userinfo .field input::placeholder{ color: #c93035;}
 .edit-userinfo .field label{font-size: 15px; padding: 5px; width: 105px; padding-right: 15px; text-align: right; float: left; letter-spacing: 1px; display: block; color: #fff; }
 .edit-userinfo .field label span{ color: #ffeb3b; }
 .edit-userinfo .field .for-error input{ border-color: #ffc107; }
+.edit-userinfo .field .for-disabled input{ cursor: no-drop; background-color: #c43b35; border-color: #be2a23; }
+
 .landing ul.link{ text-align: center; }
 .landing ul.link li{ display: inline-block; margin: 0 5px; }
 .landing ul.link li a{  width: 150px; font-size: 15px; color: #fff; background-color: #ff9900; display: block; border-radius:50px;line-height: 46px; cursor: pointer; }
