修改 日曆 input icon

--- a/iiot/taoyuang1000/register/css/style.css
+++ b/iiot/taoyuang1000/register/css/style.css
@@ -52,8 +52,12 @@ body { background-color: #c93035;}
 .edit-userinfo{ width: 100%; padding: 5px 0 0; margin: 0 auto; }
 .edit-userinfo .field{ width: 100%; text-align: left; padding: 5px 0;}
 .edit-userinfo .field .r-input{ float: left; width: calc(100% - 105px); }
+.edit-userinfo .field .for-bd{position: relative;}
+.edit-userinfo .field .for-bd::after{ content: ""; pointer-events: none; position: absolute; top: 0; right: 0; width: 40px; height: 40px; line-height: 40px; text-align: center; color: #fff; background: url(../images/calendar-alt-solid.svg) center center no-repeat #e2655f; background-size: 35%; }
 .edit-userinfo .field input{ background:none;appearance:none;-moz-appearance:none; -webkit-appearance:none; background-color: #e2655f; border: 2px solid #e2655f; color: #fff; border-radius: 4px; text-align: center; width: 100%; line-height: 40px; height: 40px; padding:5px 20px; font-size: 17px;}
 .edit-userinfo .field input::placeholder{ color: #c93035;}
+/*input[type=date]::-webkit-inner-spin-button { visibility: hidden; }*/
+
 .edit-userinfo .field label{font-size: 15px; padding: 5px; width: 105px; padding-right: 15px; text-align: right; float: left; letter-spacing: 1px; display: block; color: #fff; }
 .edit-userinfo .field label span{ color: #ffeb3b; }
 .edit-userinfo .field .for-error input{ border-color: #ffc107; }
