更新內容：新增LINE連結、隱私權及安全政策連結 與 cookies顯示資訊

--- a/iiot/taoyuang1000/event/css/style.css
+++ b/iiot/taoyuang1000/event/css/style.css
@@ -294,10 +294,32 @@ body {
   text-indent: -9999px;
 }
 
+.cookie-accept {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  padding: 15px;
+  line-height: 20px;
+  width: 100%;
+  color: #fff;
+  background-color: #ac0708c4;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  z-index: 2;
+}
+
+.cookie-accept .close {
+  float: right;
+  color: transparent;
+  text-shadow: 0 0 0 #fff;
+  cursor: pointer;
+}
+
 a.gotop {
   cursor: pointer;
   position: fixed;
-  bottom: 20px;
+  bottom: 100px;
   right: 18px;
   z-index: 15;
   width: 50px;
@@ -495,7 +517,7 @@ a.gotop {
 .middle-container .event-content .card h5 {
   font-size: 20px;
   padding: 15px 0;
-  color: #bf1c2d;
+  color: #00caca;
   font-weight: bold;
 }
 
@@ -619,7 +641,22 @@ a.gotop {
 }
 
 .middle-container .event-content .info ul.list li p span {
-  font-weight: bold;
+  color: #bf1c2d;
+}
+
+.middle-container .event-content .info ul.list li p a {
+  color: #bf1c2d;
+  text-decoration: underline;
+}
+
+.middle-container .event-content .info ul.list li p a:hover {
+  text-decoration: none;
+}
+
+.middle-container .event-content .info ul.list li p.text-remark {
+  font-size: 12px;
+  color: #ce3643;
+  line-height: 18px;
 }
 
 .middle-container .event-content .event-list {
@@ -690,6 +727,15 @@ a.gotop {
 
 .middle-container .event-content .note p span {
   font-weight: bold;
+}
+
+.middle-container .event-content .note p a {
+  color: #bf1c2d;
+  text-decoration: underline;
+}
+
+.middle-container .event-content .note p a:hover {
+  text-decoration: none;
 }
 
 @media all and (max-width: 1100px) {
