--- a/iiot/taoyuang1000/event/css/style.css
+++ b/iiot/taoyuang1000/event/css/style.css
@@ -348,7 +348,7 @@ a.gotop {
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
   background-color: #fff;
   padding: 10px 20px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
@@ -433,6 +433,13 @@ a.gotop {
 .middle-container .main-container .content .main-title {
   position: relative;
   margin: 0 auto;
+}
+
+.middle-container .main-container .content .main-title .i-accessories {
+  position: absolute;
+  width: 15%;
+  top: -40px;
+  right: -11px;
 }
 
 .middle-container .main-container .content .main-title .i-a {
@@ -793,6 +800,123 @@ a.gotop {
   .middle-container .event-content .event-list ul li p {
     font-size: 13px;
     line-height: 20px;
+  }
+}
+
+.middle-container .event-content .step-box {
+  padding: 40px 0;
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+.middle-container .event-content .step-box img {
+  width: 100%;
+}
+
+.middle-container .event-content .step-box img.mob {
+  display: none;
+}
+
+.middle-container .event-content .step-box ul {
+  position: relative;
+  padding: 30px 10px 10px 10px;
+  width: 100%;
+  background-color: #faf3ee;
+  border-radius: 30px;
+  border: 4px solid #f2ae15;
+  -webkit-box-shadow: inset rgba(255, 159, 16, 0.46) 0px 2px 6px, rgba(255, 159, 16, 0.46) 0px 2px 6px, rgba(255, 159, 16, 0.46) 2px 2px 10px;
+          box-shadow: inset rgba(255, 159, 16, 0.46) 0px 2px 6px, rgba(255, 159, 16, 0.46) 0px 2px 6px, rgba(255, 159, 16, 0.46) 2px 2px 10px;
+}
+
+.middle-container .event-content .step-box ul li {
+  position: relative;
+  width: 33%;
+  float: left;
+}
+
+.middle-container .event-content .step-box ul li::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 24px;
+  display: block;
+  background: url(../images/arr-pink.png) center center no-repeat;
+  background-size: contain;
+  bottom: 40px;
+  right: -10px;
+  z-index: 1;
+}
+
+.middle-container .event-content .step-box ul li:last-child::after {
+  display: none;
+}
+
+.middle-container .event-content .step-box ul li.top-title {
+  width: 76%;
+  position: absolute;
+  left: 12%;
+  top: -70px;
+  z-index: 1;
+}
+
+.middle-container .event-content .step-box ul li.top-title::after {
+  display: none;
+}
+
+@media all and (max-width: 850px) {
+  .middle-container .event-content .step-box ul li.top-title {
+    top: -50px;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .middle-container .event-content .step-box {
+    padding: 0 0 20px 0;
+  }
+  .middle-container .event-content .step-box img.pc {
+    display: none;
+  }
+  .middle-container .event-content .step-box img.mob {
+    display: block;
+  }
+  .middle-container .event-content .step-box ul {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 50px;
+  }
+  .middle-container .event-content .step-box ul li {
+    width: 90%;
+    float: none;
+    margin: 0 auto;
+  }
+  .middle-container .event-content .step-box ul li.top-title {
+    width: 66%;
+    left: 17%;
+    top: -50px;
+  }
+  .middle-container .event-content .step-box ul li::after {
+    bottom: -10px;
+    height: 10px;
+    left: calc(50% - 10px);
+    background-image: url(../images/arr-pink2.png);
+  }
+}
+
+@media all and (max-width: 550px) {
+  .middle-container .event-content .step-box ul {
+    padding-top: 40px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .middle-container .event-content .step-box ul {
+    padding-top: 20px;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .middle-container .event-content .step-box ul {
+    padding-top: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
