--- a/iiot/taoyuang1000/event/css/style.scss
+++ b/iiot/taoyuang1000/event/css/style.scss
@@ -117,7 +117,7 @@ a.gotop {
   width: 100%;
   position: sticky;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
   background-color: #fff;
   padding: 10px 20px;
   .nav-menu {
@@ -183,6 +183,12 @@ a.gotop {
       .main-title {
         position: relative;
         margin: 0 auto;
+        .i-accessories {
+          position: absolute;
+          width: 15%;
+          top: -40px;
+          right: -11px;
+        }
         .i-a {
           width: 52%;
           float: left;
@@ -486,6 +492,114 @@ a.gotop {
         ul li p {
           font-size: 13px;
           line-height: 20px;
+        }
+      }
+    }
+    .step-box {
+      padding: 40px 0;
+      max-width: 750px;
+      margin: 0 auto;
+      img {
+        width: 100%;
+        &.mob {
+          display: none;
+        }
+      }
+      ul {
+        position: relative;
+        padding: 30px 10px 10px 10px;
+        width: 100%;
+        background-color: #faf3ee;
+        border-radius: 30px;
+        border: 4px solid #f2ae15;
+        box-shadow: inset rgba(rgb(255, 159, 16), 0.46) 0px 2px 6px,
+          rgba(rgb(255, 159, 16), 0.46) 0px 2px 6px,
+          rgba(rgb(255, 159, 16), 0.46) 2px 2px 10px;
+        li {
+          position: relative;
+          width: 33%;
+          float: left;
+          &::after {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 24px;
+            display: block;
+            background: url(../images/arr-pink.png) center center no-repeat;
+            background-size: contain;
+            bottom: 40px;
+            right: -10px;
+            z-index: 1;
+          }
+          &:last-child::after {
+            display: none;
+          }
+          &.top-title {
+            width: 76%;
+            position: absolute;
+            left: 12%;
+            top: -70px;
+            z-index: 1;
+            &::after {
+              display: none;
+            }
+          }
+        }
+      }
+      @media all and (max-width: 850px) {
+        ul {
+          li {
+            &.top-title {
+              top: -50px;
+            }
+          }
+        }
+      }
+      @media all and (max-width: 750px) {
+        padding: 0 0 20px 0;
+        img {
+          &.pc {
+            display: none;
+          }
+          &.mob {
+            display: block;
+          }
+        }
+        ul {
+          width: 80%;
+          margin: 0 auto;
+          padding-top: 50px;
+          li {
+            width: 90%;
+            float: none;
+            margin: 0 auto;
+            &.top-title {
+              width: 66%;
+              left: 17%;
+              top: -50px;
+            }
+            &::after {
+              bottom: -10px;
+              height: 10px;
+              left: calc(50% - 10px);
+              background-image: url(../images/arr-pink2.png);
+            }
+          }
+        }
+      }
+      @media all and (max-width: 550px) {
+        ul {
+          padding-top: 40px;
+        }
+      }
+      @media all and (max-width: 500px) {
+        ul {
+          padding-top: 20px;
+        }
+      }
+      @media all and (max-width: 400px) {
+        ul {
+          padding-top: 5px;
         }
       }
     }
